--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: gray;
+  background-image: url('https://media.giphy.com/media/LAsvbjyumSIz67f40e/giphy.gif?cid=790b76117na1uwbmoembi1cc75ax525f1ps55oiu3alh9h5b&ep=v1_gifs_search&rid=giphy.gif&ct=g'); 
+  background-size: cover;      
+  background-position: center; 
+  background-repeat: no-repeat;
+  height: 100vh;               
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;  
+  padding-top: 20px;    
+  text-align: center;
+  height: 100%;         
+}
+
+
+.title {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #fff;          
+}
+
+
+.navbar {
+  background-color: #333;
+  padding: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center; 
+}
+
+.navbar-list {
+  list-style: none;
+  display: flex;
+  gap: 20px; 
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-item a {
   color: white;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-item a:hover {
+  color: #f0db4f;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+
+@media (max-width: 768px) {
+  .navbar-list {
+    flex-direction: column;
   }
 }
